--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 HOST=0.0.0.0
 DANGEROUSLY_DISABLE_HOST_CHECK=true
 REACT_APP_API_BASE= https://b6f14b660ca9.ngrok-free.app
+REACT_APP_API_URL= https://b6f14b660ca9.ngrok-free.app
